Update API specification
